<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#F0F0F0"
android:orientation="vertical"
tools:context=".AgentesInmobiliarios">

    <ImageButton
    android:id="@+id/backAgentesInmobiliarios"
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_marginStart="12dp"
    android:layout_marginLeft="12dp"
    android:layout_marginTop="16dp"
    android:background="@drawable/reply"
    android:contentDescription="@string/go_back"
    android:visibility="visible"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:visibility="visible" />

<ImageButton
    android:id="@+id/filterAgentesInmobiliarios"
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginRight="16dp"
    android:background="@drawable/filter"
    android:contentDescription="@string/filter"
    android:visibility="visible"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.666"
    app:layout_constraintStart_toEndOf="@+id/searchAgentesInmobiliarios"
    app:layout_constraintTop_toTopOf="parent"
    tools:visibility="visible" />

<SearchView
    android:id="@+id/searchAgentesInmobiliarios"
    android:layout_width="290dp"
    android:layout_height="45dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginRight="16dp"
    android:iconifiedByDefault="false"
    android:queryHint="Busca un agente"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.081"
    app:layout_constraintStart_toEndOf="@+id/backAgentesInmobiliarios"
    app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/searchAgentesInmobiliarios"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/filtroEdo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/quitarFiltroBtnAI"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textAlignment="center"
            android:backgroundTint="@color/red"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:text="@string/quitarFiltro"
            android:visibility="gone"/>

        <GridView
            android:id="@+id/grid_ai"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:horizontalSpacing="6dp"
            android:numColumns="2"
            android:verticalSpacing="6dp"
            android:padding="14dp">

        </GridView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>